# CodeGalore

./: notes.txt
Antisocial/: CMakeLists.txt  ClassDiagram.xml
Antisocial/src/: Application.cpp  AssetLoader.cpp  AssetLoader.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PrimitiveCreator.cpp  PrimitiveCreator.h  Renderer.cpp  Renderer.h  Scene.h  Transform.cpp  Transform.h  Vertex.h  Window.cpp  Window.h
EngineFundamentals/: CMakeLists.txt  CMakeLists.txt.save  setup.sh
EngineFundamentals/src/: IndexBuffer.cpp  IndexBuffer.h  LogManager.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
RendererStuff/: CMakeLists.txt
RendererStuff/src/: IndexBuffer.cpp  IndexBuffer.h  LogManager.cpp  Mesh.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  application.cpp
UnsuccessfulClasses/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
assembly_graphics/: asm_graphics  framebuffer.asm
